--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <title>John Smith</title>
-    <link rel="icon" href="src/icon.ico">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <script src="js/main.js"></script>
-  </head>
-  <body>
 
-    <div class="container">
+<head>
+  <title>Alpesh Vaghela</title>
+  <link rel="icon" href="src/icon.ico">
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <script src="js/main.js"></script>
+</head>
 
-      <div id="sidebar">
-        <h1>John Smith</h1>
-        <img src="src/profile.jpg" alt="Profile Picture" id="profile">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+<body>
 
-      <div id="terminal">
-        <!--
+  <div class="container">
+
+    <div id="sidebar">
+      <h1>Alpesh Vaghela</h1>
+      <h4>Software Engineer</h4>
+      <img src="src/profile.jpg" alt="Profile Picture" id="profile">
+      <p>
+        I have been working with web development since 2010, the period during which I have worked in different environments, from big consultancy companies to start-ups. I am a self-motivated and self-taught professional who likes to solve problems.
+      </p>
+    </div>
+
+    <div id="terminal">
+      <!--
         <p id="intro">
           Placeholder for text on top of command line.
         </p>
         -->
-        <div id="injected"></div>
-        <div id="userInput">
-          <input type="text" value="root@John Smith's Website:~$" id="prompt" size = "28" readonly="readonly">
-          <input type="text" id="txtBox" onkeypress="commandProcessor(event)" placeholder="Enter help for commands list" size = "40" autofocus>
-        </div>
+      <div id="injected"></div>
+      <div id="userInput">
+        <input type="text" value="root@Alpesh Vaghela's Website:~$" id="prompt" size="28" readonly="readonly">
+        <input type="text" id="txtBox" onkeypress="commandProcessor(event)" placeholder="Enter help for commands list"
+          size="40" autofocus>
       </div>
-
     </div>
 
-    <footer>
-      <p id="Copyright">
-        ©Copyright 2018 CedArctic
-      </p>
-    </footer>
+  </div>
 
-  </body>
+  <footer>
+    <p id="Copyright">
+      ©Copyright 2021 Alpesh Vaghela. All rights reserved.
+    </p>
+  </footer>
+
+</body>
+
 </html>
