--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         -->
       <div id="injected"></div>
       <div id="userInput">
-        <input type="text" value="root@Alpesh Vaghela's Website:~$" id="prompt" size="28" readonly="readonly">
+        <input type="text" value="guest@Alpesh Vaghela's Website:~$" id="prompt" size="28" readonly="readonly">
         <input type="text" id="txtBox" onkeypress="commandProcessor(event)" placeholder="Enter help for commands list"
           size="40" autofocus>
       </div>
